Subida con banner

--- a/informe_de_laboratorio.html
+++ b/informe_de_laboratorio.html
@@ -269,7 +269,7 @@
 <div><strong>Nota importante:</strong> Asegúrate de tener permisos de escritura en la carpeta. Si no puedes subir archivos, solicita acceso al instructor.</div>
 </div>
 </div>
-<div class="btn-container"><a href="https://drive.google.com/drive/folders/1hwIZmw_ZVrVggrMCTv8MONdQQPkAPR3j?usp=drive_link"><span style="background-color: #99cc00;">🔗 Abrir carpeta en Google Drive</span> </a></div>
+<div class="btn-container"><a href="https://drive.google.com/drive/folders/1hwIZmw_ZVrVggrMCTv8MONdQQPkAPR3j?usp=drive_link"><span style="background-color: #99cc00;">Abrir carpeta en Google Drive</span></a>                  <span style="background-color: #ffff99;"> <span style="color: #ffcc00;"><span style="color: #000000;"> </span></span></span><a href="seguimiento.html"><span style="color: #000000; background-color: #ffff99;">Seguimiento</span></a></div>
 </div>
 <p>
 <script>
