--- a/actividades.html
+++ b/actividades.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Actividades | Entre carbonos y saberes </title>
+<title>Actividades | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-6"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -568,7 +568,8 @@
         font-weight: 500;
     }</style>
 <div class="iframe-container"><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/a87d5284505749668dfbc2cf9c816de4?themeId=1&amp;templateId=35&amp;fontStackId=0" allowfullscreen="allowfullscreen">
-  </iframe></div></div><div class="iDevice_buttons feedback-button js-required"><input type="button" class="feedbackbutton" value="Quiz " /></div><div class="feedback js-feedback js-hidden"><p data-start="194" data-end="476"><em><strong>Con las actividades anteriores tuviste la oportunidad de analizar el origen de los hidrocarburos, reconocer su formación en ambientes geológicos, y reflexionar sobre sus usos en la vida cotidiana. Estos ejercicios te ayudaron a afianzar conceptos de manera práctica e interactiva.</strong></em></p>
+  </iframe></div>
+<div class="iframe-container">Tomado de WORDWALL : https://wordwall.net/es/resource/35119871/hidrocarburos</div></div><div class="iDevice_buttons feedback-button js-required"><input type="button" class="feedbackbutton" value="Quiz " /></div><div class="feedback js-feedback js-hidden"><p data-start="194" data-end="476"><em><strong>Con las actividades anteriores tuviste la oportunidad de analizar el origen de los hidrocarburos, reconocer su formación en ambientes geológicos, y reflexionar sobre sus usos en la vida cotidiana. Estos ejercicios te ayudaron a afianzar conceptos de manera práctica e interactiva.</strong></em></p>
 <p data-start="478" data-end="666"><em><strong>Ahora es momento de poner a prueba lo que aprendiste: pasa a la sección del quizz, donde encontrarás preguntas que te permitirán comprobar tu comprensión y reforzar los temas vistos.</strong></em></p>
 <p data-start="478" data-end="666" style="text-align: center;"><em><strong><a href="quiz.html"><img src="imagen_2025-09-22_135632677-removebg-preview.png" alt="" width="200" height="200" /></a><br /></strong></em></p>
 <p data-start="478" data-end="666"><em><strong> </strong></em></p>
@@ -1017,7 +1018,7 @@
 <a href="materiales.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="quiz.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
