--- a/actividades0.html
+++ b/actividades0.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Actividades | Entre carbonos y saberes </title>
+<title>Actividades | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -22,7 +22,7 @@
 <body class="exe-web-site" id="exe-node-9"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -691,9 +691,11 @@
 <h2 class="subtitle" style="text-align: center; margin-bottom: 30px;">Juegos Interactivos</h2>
 <div class="game-card">
 <div class="iframe-container"><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/e4410b39537b4b4899a77fd90d34f369?themeId=21&amp;templateId=69&amp;fontStackId=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
+<div class="iframe-container"><span style="font-size: 8pt;">Tomado de wordwall: https://wordwall.net/es/resource/23964699/alcanos-alquenos-alquinos</span></div>
 </div>
 <div class="game-card">
 <div class="iframe-container"><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/362acb46c0c6404a8c9a545bd384dfda?themeId=26&amp;templateId=49&amp;fontStackId=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe></div>
+<div class="iframe-container"><span style="font-size: 8pt;">Tomado de wordwall: https://wordwall.net/es/resource/37023140/qu%C3%ADmica/hidrocarburos</span></div>
 </div>
 </div>
 <p>
@@ -1273,7 +1275,7 @@
 <a href="materiales0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="quiz0.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
