--- a/buzn.html
+++ b/buzn.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Buzón | Entre carbonos y saberes </title>
+<title>Buzón | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-35"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -182,11 +182,9 @@
   @media (max-width: 480px) {
     #formulario-contenedor .forms-iframe { height: 500px; }
     #formulario-contenedor { margin: 10px; }
-  }
-</style>
+  }</style>
 <div id="formulario-contenedor">
 <div class="form-header">
-<h1>Encuesta — AVA Hidrocarburos</h1>
 <div class="subtitle">Tu opinión es anónima y nos ayuda a mejorar</div>
 </div>
 <div class="form-info">
@@ -208,9 +206,9 @@
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id202">
+<article class="iDevice_wrapper textIdevice" id="id210">
 <div class="iDevice emphasis0" >
-<div id="ta202_200_2" class="block iDevice_content">
+<div id="ta210_209_2" class="block iDevice_content">
 <div class="exe-text"><p></p>
 <style>
         .chemistry-background-light {
@@ -647,7 +645,7 @@
 <a href="seguimiento.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
