--- a/hidrocarburos.html
+++ b/hidrocarburos.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Hidrocarburos | Entre carbonos y saberes </title>
+<title>Hidrocarburos | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-1"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -76,12 +76,68 @@
 <div class="exe-text"><hr />
 <p style="padding-left: 30px; text-align: center;"><span style="font-size: 12pt;"><strong><span style="color: #ff0000;">Objetivo: </span>Identificar los hidrocarburos según su clasificación (saturados, insaturados y aromáticos).</strong></span></p>
 <hr />
-<p> </p></div><div class="iDevice_buttons feedback-button js-required"><input type="button" class="feedbackbutton" value="Hidrocarburos" /></div><div class="feedback js-feedback js-hidden"><div style="display: flex; align-items: center; justify-content: space-between; gap: 20px; flex-wrap: wrap;"><!-- Texto a la izquierda -->
+<p> </p></div><div class="iDevice_buttons feedback-button js-required"><input type="button" class="feedbackbutton" value="Hidrocarburos" /></div><div class="feedback js-feedback js-hidden"><!-- Inicio: Infografía sobre aplicaciones cotidianas de los hidrocarburos -->
+<div style="max-width: 1000px; margin: 18px auto; padding: 14px; border-radius: 10px; font-family: Arial, Helvetica, sans-serif; color: #243746;">
+<h3 style="text-align: center; margin: 6px 0 16px; font-size: 18px; color: #1b4f72;">¿Dónde encontramos los hidrocarburos en nuestra vida diaria?</h3>
+<div style="display: grid; grid-template-columns: repeat(auto-fit,minmax(260px,1fr)); gap: 12px; align-items: stretch;"><!-- Card 1: Cocina y alimentación -->
+<article aria-labelledby="t1" style="border: 1px solid #ffeccf; background: #fffdf6; padding: 12px; border-radius: 8px;">
+<div style="display: flex; gap: 10px; align-items: center;"><svg width="36" height="36" viewbox="0 0 24 24" fill="none" aria-hidden="true"> <path d="M3 12h18v8H3z" fill="#ff9800"></path><path d="M6 3h12v6H6z" fill="#ffc107"></path> </svg>
+<h4 id="t1" style="font-size: 15px; margin: 0; color: #5a3a00;">Cocina y alimentación</h4>
+</div>
+<p style="margin: 8px 0 6px; font-size: 13px; line-height: 1.35;">Los hidrocarburos están presentes en el gas natural que usamos para cocinar y en los envases plásticos de los alimentos. También en los aceites y ceras que recubren frutas para conservarlas frescas.</p>
+<p style="margin: 0; font-size: 12px; color: #5b6b74;"><strong>Ejemplo:</strong> gas propano y butano en las estufas domésticas.</p>
+</article>
+<!-- Card 2: Transporte y movilidad -->
+<article aria-labelledby="t2" style="border: 1px solid #e6eef6; background: #ffffff; padding: 12px; border-radius: 8px;">
+<div style="display: flex; gap: 10px; align-items: center;"><svg width="36" height="36" viewbox="0 0 24 24" fill="none" aria-hidden="true"> <circle cx="12" cy="12" r="10" fill="#1565c0"></circle><path d="M7 13h10v2H7z" fill="#90caf9"></path> </svg>
+<h4 id="t2" style="font-size: 15px; margin: 0; color: #123f66;">Transporte y movilidad</h4>
+</div>
+<p style="margin: 8px 0 6px; font-size: 13px; line-height: 1.35;">Los buses, motos y automóviles funcionan con combustibles derivados del petróleo, como la gasolina y el diésel. Además, los aceites lubricantes que protegen los motores también provienen de hidrocarburos.</p>
+<p style="margin: 0; font-size: 12px; color: #5b6b74;"><strong>Ejemplo:</strong> gasolina (mezcla de hidrocarburos) usada para desplazarnos al colegio.</p>
+</article>
+<!-- Card 3: Hogar y aseo personal -->
+<article aria-labelledby="t3" style="border: 1px solid #f1f7ec; background: #ffffff; padding: 12px; border-radius: 8px;">
+<div style="display: flex; gap: 10px; align-items: center;"><svg width="36" height="36" viewbox="0 0 24 24" fill="none" aria-hidden="true"> <rect x="4" y="4" width="16" height="16" rx="2" fill="#4caf50"></rect> </svg>
+<h4 id="t3" style="font-size: 15px; margin: 0; color: #1e4620;">Hogar y aseo personal</h4>
+</div>
+<p style="margin: 8px 0 6px; font-size: 13px; line-height: 1.35;">Los hidrocarburos están en el plástico de los cepillos, envases de champú y detergentes. También se usan como base para cremas, perfumes y productos de limpieza.</p>
+<p style="margin: 0; font-size: 12px; color: #5b6b74;"><strong>Ejemplo:</strong> vaselina y parafinas en cremas hidratantes.</p>
+</article>
+<!-- Card 4: Ropa y materiales escolares -->
+<article aria-labelledby="t4" style="border: 1px solid #f0eef9; background: #ffffff; padding: 12px; border-radius: 8px;">
+<div style="display: flex; gap: 10px; align-items: center;"><svg width="36" height="36" viewbox="0 0 24 24" fill="none" aria-hidden="true"> <path d="M3 3h18v3H3z" fill="#6a1b9a"></path><path d="M4 10h16v11H4z" fill="#ce93d8"></path> </svg>
+<h4 id="t4" style="font-size: 15px; margin: 0; color: #3a145a;">Ropa y materiales escolares</h4>
+</div>
+<p style="margin: 8px 0 6px; font-size: 13px; line-height: 1.35;">Muchas prendas deportivas, mochilas y útiles como reglas, lapiceros y borradores están hechos con polímeros derivados de hidrocarburos.</p>
+<p style="margin: 0; font-size: 12px; color: #5b6b74;"><strong>Ejemplo:</strong> poliéster y nylon en uniformes escolares.</p>
+</article>
+<!-- Card 5: Tecnología y energía -->
+<article aria-labelledby="t5" style="border: 1px solid #e9f7ef; background: #ffffff; padding: 12px; border-radius: 8px;">
+<div style="display: flex; gap: 10px; align-items: center;"><svg width="36" height="36" viewbox="0 0 24 24" fill="none" aria-hidden="true"> <path d="M12 2l3 7h-6l3-7z" fill="#2e7d32"></path><circle cx="12" cy="16" r="5" fill="#a5d6a7"></circle> </svg>
+<h4 id="t5" style="font-size: 15px; margin: 0; color: #1f5d2f;">Tecnología y energía</h4>
+</div>
+<p style="margin: 8px 0 6px; font-size: 13px; line-height: 1.35;">Los plásticos que cubren cables, los chips, carcasas de celulares y baterías portátiles dependen de materiales derivados de hidrocarburos.</p>
+<p style="margin: 0; font-size: 12px; color: #5b6b74;"><strong>Ejemplo:</strong> polímeros en computadoras y teléfonos.</p>
+</article>
+<!-- Card 6: Medio ambiente y sostenibilidad -->
+<article aria-labelledby="t6" style="border: 1px solid #fff2e6; background: #fffaf6; padding: 12px; border-radius: 8px;">
+<div style="display: flex; gap: 10px; align-items: center;"><svg width="36" height="36" viewbox="0 0 24 24" fill="none" aria-hidden="true"> <path d="M12 2l3 7h-6l3-7z" fill="#ff7043"></path><circle cx="12" cy="16" r="5" fill="#ffe0b2"></circle> </svg>
+<h4 id="t6" style="font-size: 15px; margin: 0; color: #5a2a16;">Medio ambiente y sostenibilidad</h4>
+</div>
+<p style="margin: 8px 0 6px; font-size: 13px; line-height: 1.35;">Hoy se busca reducir el impacto de los hidrocarburos mediante biocombustibles, reciclaje de plásticos y energías limpias. Pequeñas acciones cotidianas también aportan.</p>
+<p style="margin: 0; font-size: 12px; color: #5b6b74;"><strong>Ejemplo:</strong> uso de biogás para cocinar o calentar agua.</p>
+</article>
+</div>
+<!-- Nota final -->
+<p style="font-size: 12px; color: #556770; margin-top: 14px; text-align: center;"><strong>Recuerda:</strong> los hidrocarburos están en casi todo lo que usamos a diario, pero su uso responsable es clave para cuidar el ambiente 🌱.</p>
+</div>
+<!-- Fin: Infografía -->
+<div style="display: flex; align-items: center; justify-content: space-between; gap: 20px; flex-wrap: wrap;"><!-- Texto a la izquierda -->
 <div style="flex: 1; min-width: 250px; text-align: justify;">
 <p>Los <strong>hidrocarburos</strong> son compuestos orgánicos formados únicamente por átomos de <strong>carbono (<span style="color: #ff0000;">C</span>)</strong> e <strong>hidrógeno (<span style="color: #0000ff;">H</span>)</strong>. Representan la base de la <strong>química orgánica</strong> y son de gran importancia porque constituyen la <strong>principal fuente de energía</strong> utilizada por la humanidad, además de servir como materia prima en la industria petroquímica y en la producción de plásticos, medicamentos, cosméticos y otros productos.</p>
 </div>
 <!-- Imagen a la derecha -->
-<div style="flex: 1; min-width: 200px; text-align: center;"><img src="imagen_2025-09-17_150851892-removebg-preview.png" alt="Molécula de hidrocarburo" style="max-width: 100%; height: auto; border-radius: 8px;" /></div>
+<div style="flex: 1; min-width: 200px; text-align: center;"><img src="Tabla_hidrocarburos.PNG" alt="Molécula de hidrocarburo" style="max-width: 100%; height: auto; border-radius: 8px;" width="590" height="308" /></div>
 </div></div>
 </div>
 </div>
@@ -123,7 +179,10 @@
 <div class="exe-text"><div style="display: flex; gap: 20px; align-items: flex-start; flex-wrap: wrap;"><!-- Texto izquierdo -->
 <div style="flex: 2; min-width: 260px;">
 <p><strong>Metano</strong> (<strong><span style="color: #ff0000;">C</span><span style="color: #0000ff;">H</span></strong><sub>4</sub>): principal componente del gas natural usado en estufas y calentadores.<br /><strong>Butano</strong> (<strong><span style="color: #ff0000;">C</span></strong><sub>4</sub><strong><span style="color: #0000ff;">H</span></strong><sub>10</sub>): presente en los encendedores.<br /><strong>Gasolina</strong>: mezcla de hidrocarburos líquidos, usada como combustible en automóviles.<br /><strong>Eteno</strong> (<strong><span style="color: #ff0000;">C</span></strong><sub>2</sub><strong><span style="color: #0000ff;">H</span></strong><sub>4</sub>): gas empleado en la maduración de frutas.<br /><strong>Acetileno</strong> (<strong><span style="color: #ff0000;">C</span></strong><sub>2</sub><strong><span style="color: #0000ff;">H</span></strong><sub>2</sub>): gas usado en soldaduras de metales.<br /><strong>Benceno</strong> (<strong><span style="color: #ff0000;">C</span></strong><sub>6</sub><strong><span style="color: #0000ff;">H</span></strong><sub>6</sub>): solvente industrial, aunque su uso está restringido por ser tóxico.<br /><strong>Asfalto</strong>: mezcla de hidrocarburos de cadena larga, utilizado en la pavimentación de carreteras.</p>
+<p></p>
+<p></p>
 <p><img src="imagen_2025-09-17_103320911-removebg-preview.png" alt="" width="320" height="233" style="display: block; margin-left: auto; margin-right: auto;" /></p>
+<p>                                                            <span style="font-size: 8pt;"> <a href="https://tomi.digital/es/es/275011/los-hidrocarburos-oxigenados?utm_source=google&amp;utm_medium=seo">Imagen</a></span><a href="https://tomi.digital/es/es/275011/los-hidrocarburos-oxigenados?utm_source=google&amp;utm_medium=seo"> <span style="font-size: 8pt;">tomada de TOMI.digital</span></a></p>
 </div>
 <!-- Recuadro derecho -->
 <div style="flex: 1; min-width: 220px; border: 2px solid #4CAF50; background-color: #f0fff4; padding: 15px; border-radius: 8px;">
@@ -577,7 +636,7 @@
 <a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
