--- a/actividades1.html
+++ b/actividades1.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Actividades | Entre carbonos y saberes </title>
+<title>Actividades | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -21,7 +21,7 @@
 <body class="exe-web-site" id="exe-node-15"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -74,7 +74,7 @@
 <div id="ta92_128_2" class="block iDevice_content">
 <div class="exe-text"><div style="max-width: 950px; margin: 0 auto; padding: 20px; font-family: Arial, sans-serif; line-height: 1.6;">
 <h2 style="text-align: center; color: #2c3e50;"> Actividad: Construcción de Hidrocarburos</h2>
-<p style="text-align: justify;">A continuación encontrarás <strong>cuatro editores moleculares independientes</strong>. En cada uno deberás dibujar la molécula solicitada según la nomenclatura IUPAC. Recuerda que este editor no usa estructura de Lewis, sino un sistema de <em>dibujo químico en 2D</em>.</p>
+<p style="text-align: justify;">A continuación encontrarás <strong>cuatro editores moleculares virtuales de <a href="https://jsme-editor.github.io/dist/JSME_test.html">JSME EDITOR</a></strong>. En cada uno deberás dibujar la molécula solicitada según la nomenclatura IUPAC. Recuerda que este editor no usa estructura de Lewis, sino un sistema de <em>dibujo químico en 2D</em>.</p>
 <h3 style="color: #34495e; text-align: center;"> Instrucciones generales de uso</h3>
 <ul>
 <li>Antes de comenzar, haz clic en <b>Clear Editor</b> (parte inferior del editor) para borrar la molécula inicial.</li>
@@ -136,7 +136,8 @@
 <div class="iDevice_content_wrapper">
 <div id="ta112_144_2" class="block iDevice_content">
 <div class="exe-text"><div style="display: flex; justify-content: center; margin: 20px 0;"><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/1d6a6c9151014c4bbe66c4a3a59cffff?themeId=1&amp;templateId=3&amp;fontStackId=0" frameborder="0" allowfullscreen="allowfullscreen">
-  </iframe></div></div>
+  </iframe></div>
+<div style="display: flex; justify-content: center; margin: 20px 0;">Tomado de Wordwall: https://wordwall.net/es/resource/16203063/hidrocarburos</div></div>
 </div>
 </div>
 </div>
@@ -600,7 +601,7 @@
 <a href="materiales1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="evaluacin_final.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
