--- a/informe_de_laboratorio.html
+++ b/informe_de_laboratorio.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Informe de laboratorio | Entre carbonos y saberes </title>
+<title>Informe de laboratorio | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-21"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -245,7 +245,7 @@
 <div class="step">
 <div class="step-number">1</div>
 <strong>Prepara tu archivo</strong>
-<p>Guarda tu informe en formato PDF con el nombre: "Apellido_Nombre_LabX.pdf"</p>
+<p>Guarda tu protocolo en formato PDF con el nombre: "Apellido_Nombre_LabX.pdf"</p>
 </div>
 <div class="step">
 <div class="step-number">2</div>
@@ -266,7 +266,7 @@
 </div>
 <div class="drive-container">
 <div class="upload-info"><i>💡</i>
-<div><strong>Nota importante:</strong> Asegúrate de tener permisos de escritura en la carpeta. Si no puedes subir archivos, solicita acceso al instructor.</div>
+<div><strong>Nota importante:</strong> Asegúrate de tener adjunto la hoja de seguimiento (COMPLETA)  a tu protocolo DEBIDAMENTE MARCADA</div>
 </div>
 </div>
 <div class="btn-container"><a href="https://drive.google.com/drive/folders/1hwIZmw_ZVrVggrMCTv8MONdQQPkAPR3j?usp=drive_link"><span style="background-color: #99cc00;">Abrir carpeta en Google Drive</span></a>                  <span style="background-color: #ffff99;"> <span style="color: #ffcc00;"><span style="color: #000000;"> </span></span></span><a href="seguimiento.html"><span style="color: #000000; background-color: #ffff99;">Seguimiento</span></a></div>
@@ -731,7 +731,7 @@
 <a href="laboratorio.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="seguimiento.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
