--- a/materiales.html
+++ b/materiales.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Materiales | Entre carbonos y saberes </title>
+<title>Materiales | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-11"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -77,21 +77,21 @@
 <p style="text-align: center; font-size: 15px; color: #333; margin-bottom: 20px;">Con <strong>solo 6 minutos</strong> de videos puedes reforzar lo aprendido sobre la <strong>definición, clasificación y ejemplos de los hidrocarburos</strong>. Una forma rápida y visual de repasar la sección anterior.</p>
 <!-- Contenedor flexible de las tarjetas -->
 <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;"><!-- Tarjeta Video 1 -->
-<div style="flex: 1 1 300px; max-width: 360px; background: #f9f9f9; border: 1px solid #ccc; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.08); overflow: hidden;"><iframe width="100%" height="200" src="https://www.youtube.com/embed/itVIgu2WAU8?si=9-fIPnKUKQO7LC8e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe>
+<div style="flex: 1 1 300px; max-width: 360px; background: #f9f9f9; border: 1px solid #ccc; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.08); overflow: hidden;"><iframe width="100%" height="200" src="https://www.youtube.com/embed/itVIgu2WAU8?si=9-fIPnKUKQO7LC8e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe><br />
 <div style="padding: 12px; text-align: center;">
-<h4 style="margin: 0; font-size: 16px; color: #0d47a1;">1.Introducción a los hidrocarburos</h4>
+<h4 style="margin: 0; font-size: 16px; color: #0d47a1;">1.Introducción a los hidrocarburos <a href="https://www.youtube.com/channel/UCvEzJviE03cGFNkLoWL9Bsg">de A Cierta Ciencia</a></h4>
 </div>
 </div>
 <!-- Tarjeta Video 2 -->
 <div style="flex: 1 1 300px; max-width: 360px; background: #f9f9f9; border: 1px solid #ccc; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.08); overflow: hidden;"><iframe width="100%" height="200" src="https://www.youtube.com/embed/rckV-kI17Cw?si=2-CaHF9LUSYiPrmD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe>
 <div style="padding: 12px; text-align: center;">
-<h4 style="margin: 0; font-size: 16px; color: #0d47a1;">2.Alcanos, alquenos y alquinos</h4>
+<h4 style="margin: 0; font-size: 16px; color: #0d47a1;">2.Alcanos, alquenos y alquinos <a href="https://www.youtube.com/channel/UCvEzJviE03cGFNkLoWL9Bsg">de A Cierta Ciencia</a></h4>
 </div>
 </div>
 <!-- Tarjeta Video 3 -->
 <div style="flex: 1 1 300px; max-width: 360px; background: #f9f9f9; border: 1px solid #ccc; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.08); overflow: hidden;"><iframe width="100%" height="200" src="https://www.youtube.com/embed/JxThmQEPZnM?si=Hfz1SBI3-p82flDC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe>
 <div style="padding: 12px; text-align: center;">
-<h4 style="margin: 0; font-size: 16px; color: #0d47a1;">3.Saturados e insaturados</h4>
+<h4 style="margin: 0; font-size: 16px; color: #0d47a1;">3.Saturados e insaturados <a href="https://www.youtube.com/channel/UCvEzJviE03cGFNkLoWL9Bsg">de A Cierta Ciencia</a></h4>
 </div>
 </div>
 </div>
@@ -386,15 +386,15 @@
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_assignment_list_black" id="id81">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header" style="background-image:url(icon_assignment_list_black.png)"><h1 class="iDeviceTitle">ACTIVIDADES</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta81_129_2" class="block iDevice_content">
-<div class="exe-text"><p><a href="actividades.html"><img src="imagen_2025-09-22_133553977-removebg-preview.png" alt="" width="484" height="187" style="display: block; margin-left: auto; margin-right: auto;" /></a></p></div>
-</div>
-</div>
+<article class="iDevice_wrapper textIdevice" id="id215">
+<div class="iDevice emphasis0" >
+<div id="ta215_214_2" class="block iDevice_content">
+<div class="exe-text"><div style="border: 2px solid #4a90e2; border-radius: 10px; padding: 10px; background-color: #f4faff;">
+<h3 style="text-align: center; color: #2c3e50; font-family: Arial, sans-serif;"></h3>
+<iframe width="100%" height="1200" style="border: 1px solid #ccc; border-radius: 8px;" src="https://drive.google.com/file/d/1F3RzSdbsL9R5mzFVH5b7V2VY45G8V1bM/preview" allow="autoplay">
+  </iframe>
+<p style="text-align: center; font-size: 14px; color: #555; font-family: Arial, sans-serif; margin-top: 8px;">Fuente: Documento compartido desde Google Drive – uso educativo sin fines de lucro.</p>
+</div></div>
 </div>
 </div>
 </article>
@@ -827,6 +827,18 @@
 </div>
 </div>
 </article>
+<article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_assignment_list_black" id="id81">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header" style="background-image:url(icon_assignment_list_black.png)"><h1 class="iDeviceTitle">ACTIVIDADES</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta81_129_2" class="block iDevice_content">
+<div class="exe-text"><p><a href="actividades.html"><img src="imagen_2025-09-22_133553977-removebg-preview.png" alt="" width="484" height="187" style="display: block; margin-left: auto; margin-right: auto;" /></a></p></div>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
@@ -837,7 +849,7 @@
 <a href="hidrocarburos.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="actividades.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
