--- a/materiales1.html
+++ b/materiales1.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Materiales | Entre carbonos y saberes </title>
+<title>Materiales | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-13"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -447,6 +447,23 @@
 </ul>
 </div>
 </div></div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice" id="id216">
+<div class="iDevice emphasis0" >
+<div id="ta216_215_2" class="block iDevice_content">
+<div class="exe-text"><div style="border: 2px solid #16a085; border-radius: 10px; padding: 10px; background-color: #e8f8f5;"><iframe width="100%" height="1200" style="border: 1px solid #ccc; border-radius: 8px;" src="https://drive.google.com/file/d/1nGFc2055nhQWozD-u7btxyChRRiuYRdd/preview" allow="autoplay">
+  </iframe>
+<p style="text-align: center; font-size: 14px; color: #555; font-family: Arial, sans-serif; margin-top: 8px;">Fuente: Documento compartido desde Google Drive — uso educativo y sin fines de lucro.</p>
+</div></div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice" id="id180">
+<div class="iDevice emphasis0" >
+<div id="ta180_175_2" class="block iDevice_content">
+<div class="exe-text"><p><a href="actividades1.html">CONTINUAR</a></p></div>
 </div>
 </div>
 </article>
@@ -879,13 +896,6 @@
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id180">
-<div class="iDevice emphasis0" >
-<div id="ta180_175_2" class="block iDevice_content">
-<div class="exe-text"><p><a href="actividades1.html">CONTINUAR</a></p></div>
-</div>
-</div>
-</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
@@ -896,7 +906,7 @@
 <a href="representacin.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="actividades1.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
