--- a/nomenclatura.html
+++ b/nomenclatura.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Nomenclatura | Entre carbonos y saberes </title>
+<title>Nomenclatura | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-2"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -480,23 +480,23 @@
 <h3 style="text-align: center; color: #004080;">Representaciones de hidrocarburos</h3>
 <div class="diagram">
 <h4>Estructura Lineal</h4>
-<p><img src="imagen_2025-09-25_131305992-removebg-preview.png" width="102" height="45" alt="" /></p>
+<p><img src="Butano.1.PNG" width="332" height="136" /></p>
 <p></p>
 <p>Representación en forma de cadena continua. Ejemplo: butano.</p>
 </div>
 <div class="diagram">
 <h4>Estructura de Lewis</h4>
-<p><img src="imagen_2025-09-25_131410883-removebg-preview.png" width="264" height="296" alt="" /></p>
+<p><img src="estructura_de_lewis_(1).png" width="300" height="300" /></p>
 <p>Muestra electrones compartidos en enlaces covalentes. Ejemplo: metano.</p>
 </div>
 <div class="diagram">
 <h4>Estructura en 3D</h4>
-<p><img src="imagen_2025-09-25_131557952-removebg-preview.png" width="334" height="323" alt="" style="display: block; margin-left: auto; margin-right: auto;" /></p>
+<p><img src="Methane.png" width="480" height="480" style="display: block; margin-left: auto; margin-right: auto;" /></p>
 <p>Representación espacial con ángulos de enlace. Ejemplo: metano.</p>
 </div>
 <div class="diagram">
 <h4>Estructura aromática</h4>
-<p><img src="imagen_2025-09-25_131747422-removebg-preview.png" width="275" height="155" alt="" /></p>
+<p><img src="Benzeno.PNG" width="234" height="225" /></p>
 <p>Aros conjugados. Ejemplo: benceno.</p>
 </div>
 </aside>
@@ -953,7 +953,7 @@
 <a href="quiz.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales0.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
