--- a/representacin.html
+++ b/representacin.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Representación | Entre carbonos y saberes </title>
+<title>Representación | Entre carbonos y saberes beta </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-3"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes beta</div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Inicio</a></li>
@@ -613,7 +613,7 @@
 <h2 class="video-title">Representaciones en la Química Orgánica</h2>
 <div class="video-wrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/XwaYy8yaYf8?si=S1aiTJ4TSXzWdRT2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe></div>
 <div class="video-description">
-<p style="text-align: center;">Conoce las distintas maneras de representar un compuesto</p>
+<p style="text-align: center;">Conoce las distintas maneras de representar un compuesto. Canal : <a href="https://www.youtube.com/@soniaglz">Sonia Ag</a></p>
 </div>
 </div>
 <div class="video-card note-video">
@@ -621,7 +621,7 @@
 <h2 class="video-title">Geometría Molecular</h2>
 <div class="video-wrapper"><iframe width="560" height="315" src="https://www.youtube.com/embed/cnHMm4gomHA?si=zwClXhXHxOm3xLSe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe></div>
 <div class="video-description">
-<p><strong>Nota importante:</strong> Este video profundiza en conceptos esenciales que complementan la comprensión de la representación de la química orgánica.</p>
+<p><strong>Nota importante:</strong> Este video profundiza en conceptos esenciales que complementan la comprensión de la representación de la química orgánica. Canal: <a href="https://www.youtube.com/c/TicmasEducaci%C3%B3n">Ticmas Educacíon</a></p>
 </div>
 </div>
 </div>
@@ -1075,7 +1075,7 @@
 <a href="quiz0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales1.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
+<footer id="siteFooter">Daniel Ruiz Lopez y Lorena Laiton 
 TICS Y DIDACTICA DE LA QUIMICA
 UNIVERSIDAD DEL TOLIMA
 IX Semestre
